# Youtube-Setiment-Analyzer

./: .gitignore  .replit  README.md  app.py  data_preprocessing.py  model.py  phrase_analyzer.py  pyproject.toml  requirements.txt  utils.py  visualizations.py  youtube_api.py
.streamlit/: config.toml
