[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "google-api-python-client>=2.169.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "tensorflow>=2.10.0",
    "wordcloud>=1.9.4",
]
